--- a/PhotoMap/Base.lproj/Main.storyboard
+++ b/PhotoMap/Base.lproj/Main.storyboard
@@ -30,6 +30,9 @@
                                 <state key="normal" backgroundImage="camera" catalog="system">
                                     <color key="titleColor" systemColor="secondarySystemBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="onCameraTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vTx-z1-ybX"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
